TDP-002: - Some minor changes before stating the front-end devlopment

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,10 @@ djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
 django-cors-headers = "*"
+django-rest-auth = {extras = ["with_social"], version = "*"}
 
 [dev-packages]
+pylint = "*"
 
 [requires]
 python_version = "3.9"
